--- a/dzvoice/index.html
+++ b/dzvoice/index.html
@@ -135,7 +135,7 @@
                   <span></span>
                 </div>
                 <div class="header-burger__wrap">
-                  <div class="logo__wrap">
+                  <div class="header-burger__logo-wrap">
                     <a class="header-burger__logo-link" href="./index.html">
                       <svg
                         width="131"
@@ -144,7 +144,7 @@
                         fill="none"
                         xmlns="http://www.w3.org/2000/svg"
                         xmlns:xlink="http://www.w3.org/1999/xlink"
-                        class="logo__img"
+                        class="header-burger__logo-img"
                       >
                         <path
                           d="M0.8 10.4V25H10.4C17.26 25 20.46 21.8 20.46 18.04V17.36C20.46 13.6 17.26 10.4 10.4 10.4H0.8ZM12.56 17.78C12.56 18.68 11.82 19.42 10.1 19.42H8.52V15.98H10.1C11.82 15.98 12.56 16.72 12.56 17.62V17.78ZM38.8339 15.52V10.4H21.5339V15.76H28.8139L21.4139 19.88V25H38.8739V19.64H31.4939L38.8339 15.52ZM57.3133 17.44L54.9533 10.4H47.1133L52.8733 25H61.8333L67.4333 10.4H59.5933L57.3133 17.44ZM75.2538 25.4C81.7338 25.4 84.2138 22.94 84.2138 19.86V19.54C84.2138 16.46 81.7338 14 75.2538 14C68.7938 14 66.3138 16.46 66.3138 19.54V19.86C66.3138 22.94 68.7938 25.4 75.2538 25.4ZM75.2538 20.96C74.1338 20.96 73.6538 20.5 73.6538 19.68C73.6538 18.9 74.1338 18.44 75.2538 18.44C76.3938 18.44 76.8738 18.9 76.8738 19.68C76.8738 20.5 76.3938 20.96 75.2538 20.96ZM93.3341 19.86C93.3341 22.92 95.8141 25.4 102.214 25.4C108.454 25.4 110.654 23.3 111.134 20.26H103.654C103.494 20.66 103.134 20.96 102.214 20.96C101.154 20.96 100.674 20.5 100.674 19.7C100.674 18.9 101.154 18.44 102.214 18.44C103.134 18.44 103.494 18.74 103.654 19.14H111.114C110.634 16.1 108.454 14 102.214 14C95.8141 14 93.3341 16.48 93.3341 19.54V19.86ZM130.447 19.2C130.447 16.38 128.067 14 121.627 14C115.027 14 112.547 16.48 112.547 19.52V19.88C112.547 22.92 115.027 25.4 121.627 25.4C127.787 25.4 129.867 23.32 130.287 20.98H122.827C122.587 21.2 122.367 21.42 121.287 21.42C120.367 21.42 119.867 21.12 119.687 20.34H130.367C130.427 19.94 130.447 19.62 130.447 19.2ZM121.467 17.74C122.547 17.74 123.027 18.02 123.167 18.68H119.727C119.947 18.02 120.467 17.74 121.467 17.74Z"
@@ -243,13 +243,73 @@
                   </ul>
                   <ul class="header-burger__socials">
                     <li class="header-burger__socials-item">
-                      <a href="#" class="header-burger__socials-link"></a>
+                      <a href="#" class="header-burger__socials-link">
+                        <svg
+                          width="40"
+                          height="40"
+                          viewBox="0 0 40 40"
+                          fill="none"
+                          xmlns="http://www.w3.org/2000/svg"
+                          class="contacts-socials-mob__img contacts-socials-mob__img--vk"
+                        >
+                          <circle
+                            cx="20"
+                            cy="20"
+                            r="19.5"
+                            stroke="#002939"
+                          ></circle>
+                          <path
+                            d="M22.2461 30.4862V25.038C25.9056 25.5959 27.0625 28.4759 29.3928 30.4862H35.3333C33.8481 27.1704 31.6321 24.2335 28.8513 21.8954C30.9846 18.9579 33.2492 16.1928 34.3569 12H28.9579C26.841 15.2082 25.7251 18.9662 22.2461 21.4441V12H14.4102L16.281 14.3138V22.56C13.2451 22.2072 11.1938 16.6523 8.97024 12H3.33331C5.3846 18.2851 9.70049 32.078 22.2461 30.4862V30.4862Z"
+                            stroke="#002939"
+                            stroke-linecap="round"
+                            stroke-linejoin="round"
+                          ></path>
+                        </svg>
+                      </a>
                     </li>
                     <li class="header-burger__socials-item">
-                      <a href="#" class="header-burger__socials-link"></a>
+                      <a href="#" class="header-burger__socials-link">
+                        <svg
+                          width="40"
+                          height="40"
+                          viewBox="0 0 40 40"
+                          fill="none"
+                          xmlns="http://www.w3.org/2000/svg"
+                          class="contacts-socials-mob__img contacts-socials-mob__img--tg"
+                        >
+                          <circle
+                            cx="20"
+                            cy="20"
+                            r="19.5"
+                            stroke="#002939"
+                          ></circle>
+                          <path
+                            d="M32.5586 8.66666C33.5447 8.66666 34.2886 9.53166 33.8907 11.1406L29.064 33.8902C28.7266 35.5077 27.7491 35.897 26.3997 35.1444L14.8865 26.6414C14.8419 26.6094 14.8055 26.5672 14.7804 26.5183C14.7553 26.4694 14.7422 26.4153 14.7422 26.3603C14.7422 26.3054 14.7553 26.2512 14.7804 26.2023C14.8055 26.1534 14.8419 26.1112 14.8865 26.0792L28.1816 14.0729C28.7872 13.5366 28.0519 13.2771 27.2561 13.7615L10.5702 24.2886C10.5196 24.3216 10.4621 24.3427 10.4021 24.3502C10.3422 24.3577 10.2813 24.3514 10.2242 24.3319L3.13977 22.0915C1.56546 21.6331 1.56546 20.5518 3.49442 19.782L31.8406 8.84831C32.0654 8.74046 32.3095 8.6787 32.5586 8.66666V8.66666Z"
+                            stroke="#002939"
+                            stroke-linecap="round"
+                            stroke-linejoin="round"
+                          ></path>
+                        </svg>
+                      </a>
                     </li>
                     <li class="header-burger__socials-item">
-                      <a href="#" class="header-burger__socials-link"></a>
+                      <a href="#" class="header-burger__socials-link">
+                        <svg
+                          width="42"
+                          height="42"
+                          viewBox="0 0 42 42"
+                          fill="none"
+                          xmlns="http://www.w3.org/2000/svg"
+                          class="contacts-socials-mob__img contacts-socials-mob__img--wa"
+                        >
+                          <path
+                            d="M21.009 1C17.5333 1.00373 14.1184 1.91196 11.1 3.63539C8.08158 5.35883 5.56368 7.83812 3.79382 10.8295C2.02396 13.8209 1.06307 17.2214 1.00564 20.6967C0.948199 24.172 1.79619 27.6024 3.46623 30.6506L1 41.0181L11.3675 38.5519C14.0415 40.0187 17.0154 40.8549 20.0621 40.9965C23.1087 41.1381 26.1474 40.5814 28.9459 39.3688C31.7444 38.1563 34.2287 36.32 36.2089 34.0004C38.1892 31.6808 39.6129 28.9391 40.3714 25.985C41.1299 23.0309 41.203 19.9425 40.5852 16.9558C39.9674 13.9692 38.675 11.1632 36.8067 8.75248C34.9385 6.34173 32.5439 4.38996 29.8059 3.04633C27.0679 1.7027 24.059 1.00276 21.009 1V1ZM11.0045 10.0925H16.4582C16.705 10.0925 16.9417 10.1905 17.1162 10.3651C17.2908 10.5396 17.3888 10.7763 17.3888 11.0231C17.3583 12.2643 17.5668 13.4997 18.003 14.662C18.1909 15.0511 18.2322 15.4949 18.1194 15.9119C18.0066 16.329 17.7472 16.6914 17.3888 16.9328L15.481 18.7941C16.3269 20.446 17.433 21.9512 18.7569 23.2519C20.0471 24.5974 21.5461 25.7256 23.1961 26.593L25.0574 24.6851C25.988 23.7545 26.4161 23.7545 27.3282 24.0709C28.4905 24.5071 29.7259 24.7157 30.967 24.6851C31.2102 24.6965 31.4404 24.7981 31.6125 24.9703C31.7847 25.1424 31.8864 25.3726 31.8977 25.6158V31.0694C31.8864 31.3126 31.7847 31.5428 31.6125 31.7149C31.4404 31.8871 31.2102 31.9887 30.967 32.0001C25.4926 31.7616 20.3033 29.4921 16.4116 25.6344C12.5479 21.7468 10.2773 16.5551 10.046 11.079C10.0482 10.8228 10.149 10.5774 10.3275 10.3936C10.5061 10.2099 10.7485 10.1021 11.0045 10.0925V10.0925Z"
+                            stroke="#002939"
+                            stroke-linecap="round"
+                            stroke-linejoin="round"
+                          ></path>
+                        </svg>
+                      </a>
                     </li>
                   </ul>
                 </div>
@@ -262,7 +322,7 @@
     </header>
     <main>
       <section class="offer">
-        <div class="offer-bg"></div>
+        <!--  <div class="offer-bg"></div> -->
         <div class="container">
           <div class="row">
             <div class="col-lg-12">
@@ -560,7 +620,8 @@
                 >
               </h2>
               <h2 class="methods__title-mob">
-                5 способов улучшить вашу вокальную технику <span class="text-fill">прямо сейчас</span>
+                5 способов улучшить вашу вокальную технику
+                <span class="text-fill">прямо сейчас</span>
               </h2>
             </div>
           </div>
@@ -603,15 +664,13 @@
           </div>
           <div class="row">
             <div class="col-lg-12">
-                <h3 class="about__subtitle">
-                  КАК Я МОГУ <span></span> ВАМ ПОМОЧЬ
-                </h3>
+              <h3 class="about__subtitle">
+                КАК Я МОГУ <span></span> ВАМ ПОМОЧЬ
+              </h3>
               <div class="about-wrap wrap">
                 <ul class="about-list">
                   <li class="about-list__item">
-                    <p class="about-list__title-mob">
-                      как я могу помочь
-                    </p>
+                    <p class="about-list__title-mob">как я могу помочь</p>
                   </li>
                   <li class="about-list__item">
                     <p class="about-list__text">
