--- a/dzvoice/article.html
+++ b/dzvoice/article.html
@@ -18,6 +18,7 @@
     <script src="assets/js/query.js"></script>
     <title>DZVoice</title>
   </head>
+
   <body>
     <header class="header">
       <img
@@ -325,195 +326,71 @@
       </div>
     </header>
     <main>
-      <section class="blog-offer">
-        <div class="blog-offer__bg"></div>
+      <section class="article">
+        <div class="article__bg-first"></div>
+        <div class="article__bg-second"></div>
         <div class="container">
           <div class="row">
             <div class="col-lg-12">
-              <h1 class="blog-offer__title">
-                Блог Даши Dolly <span>Захаровой</span>
-              </h1>
-              <ul class="socials">
-                <li class="socials__item">
-                  <a href="#" class="socials__link">
-                    <svg
-                      width="40"
-                      height="40"
-                      viewBox="0 0 40 40"
-                      fill="none"
-                      xmlns="http://www.w3.org/2000/svg"
-                      class="socials__img socials__img--vk"
-                    >
-                      <circle
-                        cx="20"
-                        cy="20"
-                        r="19.5"
-                        stroke="#002939"
-                      ></circle>
-                      <path
-                        d="M22.2461 30.4862V25.038C25.9056 25.5959 27.0625 28.4759 29.3928 30.4862H35.3333C33.8481 27.1704 31.6321 24.2335 28.8513 21.8954C30.9846 18.9579 33.2492 16.1928 34.3569 12H28.9579C26.841 15.2082 25.7251 18.9662 22.2461 21.4441V12H14.4102L16.281 14.3138V22.56C13.2451 22.2072 11.1938 16.6523 8.97024 12H3.33331C5.3846 18.2851 9.70049 32.078 22.2461 30.4862V30.4862Z"
-                        stroke="#002939"
-                        stroke-linecap="round"
-                        stroke-linejoin="round"
-                      ></path>
-                    </svg>
-                  </a>
-                </li>
-                <li class="socials__item">
-                  <a href="#" class="socials__link">
-                    <svg
-                      width="40"
-                      height="40"
-                      viewBox="0 0 40 40"
-                      fill="none"
-                      xmlns="http://www.w3.org/2000/svg"
-                      class="socials__img socials__img--tg"
-                    >
-                      <circle
-                        cx="20"
-                        cy="20"
-                        r="19.5"
-                        stroke="#002939"
-                      ></circle>
-                      <path
-                        d="M32.5586 8.66666C33.5447 8.66666 34.2886 9.53166 33.8907 11.1406L29.064 33.8902C28.7266 35.5077 27.7491 35.897 26.3997 35.1444L14.8865 26.6414C14.8419 26.6094 14.8055 26.5672 14.7804 26.5183C14.7553 26.4694 14.7422 26.4153 14.7422 26.3603C14.7422 26.3054 14.7553 26.2512 14.7804 26.2023C14.8055 26.1534 14.8419 26.1112 14.8865 26.0792L28.1816 14.0729C28.7872 13.5366 28.0519 13.2771 27.2561 13.7615L10.5702 24.2886C10.5196 24.3216 10.4621 24.3427 10.4021 24.3502C10.3422 24.3577 10.2813 24.3514 10.2242 24.3319L3.13977 22.0915C1.56546 21.6331 1.56546 20.5518 3.49442 19.782L31.8406 8.84831C32.0654 8.74046 32.3095 8.6787 32.5586 8.66666V8.66666Z"
-                        stroke="#002939"
-                        stroke-linecap="round"
-                        stroke-linejoin="round"
-                      ></path>
-                    </svg>
-                  </a>
-                </li>
-                <li class="socials__item">
-                  <a href="#" class="socials__link">
-                    <svg
-                      width="42"
-                      height="42"
-                      viewBox="0 0 42 42"
-                      fill="none"
-                      xmlns="http://www.w3.org/2000/svg"
-                      class="socials__img socials__img--wa"
-                    >
-                      <path
-                        d="M21.009 1C17.5333 1.00373 14.1184 1.91196 11.1 3.63539C8.08158 5.35883 5.56368 7.83812 3.79382 10.8295C2.02396 13.8209 1.06307 17.2214 1.00564 20.6967C0.948199 24.172 1.79619 27.6024 3.46623 30.6506L1 41.0181L11.3675 38.5519C14.0415 40.0187 17.0154 40.8549 20.0621 40.9965C23.1087 41.1381 26.1474 40.5814 28.9459 39.3688C31.7444 38.1563 34.2287 36.32 36.2089 34.0004C38.1892 31.6808 39.6129 28.9391 40.3714 25.985C41.1299 23.0309 41.203 19.9425 40.5852 16.9558C39.9674 13.9692 38.675 11.1632 36.8067 8.75248C34.9385 6.34173 32.5439 4.38996 29.8059 3.04633C27.0679 1.7027 24.059 1.00276 21.009 1V1ZM11.0045 10.0925H16.4582C16.705 10.0925 16.9417 10.1905 17.1162 10.3651C17.2908 10.5396 17.3888 10.7763 17.3888 11.0231C17.3583 12.2643 17.5668 13.4997 18.003 14.662C18.1909 15.0511 18.2322 15.4949 18.1194 15.9119C18.0066 16.329 17.7472 16.6914 17.3888 16.9328L15.481 18.7941C16.3269 20.446 17.433 21.9512 18.7569 23.2519C20.0471 24.5974 21.5461 25.7256 23.1961 26.593L25.0574 24.6851C25.988 23.7545 26.4161 23.7545 27.3282 24.0709C28.4905 24.5071 29.7259 24.7157 30.967 24.6851C31.2102 24.6965 31.4404 24.7981 31.6125 24.9703C31.7847 25.1424 31.8864 25.3726 31.8977 25.6158V31.0694C31.8864 31.3126 31.7847 31.5428 31.6125 31.7149C31.4404 31.8871 31.2102 31.9887 30.967 32.0001C25.4926 31.7616 20.3033 29.4921 16.4116 25.6344C12.5479 21.7468 10.2773 16.5551 10.046 11.079C10.0482 10.8228 10.149 10.5774 10.3275 10.3936C10.5061 10.2099 10.7485 10.1021 11.0045 10.0925V10.0925Z"
-                        stroke="#002939"
-                        stroke-linecap="round"
-                        stroke-linejoin="round"
-                      ></path>
-                    </svg>
-                  </a>
-                </li>
-              </ul>
-            </div>
-          </div>
-        </div>
-      </section>
-      <section class="blog">
-        <div class="container">
-          <div class="row">
-            <div class="col-lg-12">
-              <h2 class="blog__title">МОИ ЗАМЕТКИ</h2>
-              <div class="blog__list">
-                <article class="blog__article">
+              <div class="article__content">
+                <p class="article__title">Убеждай свиней</p>
+                <p class="article__quote">
+                  «В твоем голосе должна быть не только сила, но и призыв.
+                  Убеждай свиней в том, что у тебя для них кое-что припасено!».
+                </p>
+                <div class="article__bg-img">
                   <img
-                    src="assets/img/blog/blog/prev.png"
-                    alt="Preview"
-                    class="blog__article-img"
+                    src="assets/img/article/image.png"
+                    class="article__img"
                   />
-                  <div class="blog__article-content">
-                    <h3 class="blog__article-title">УБЕЖДАЙ СВИНЕЙ!</h3>
-                    <img src="assets/img/blog/blog/prev.png" alt="prev" class="blog__article-img-mob">
-                    <p class="blog__article-desc">
-                      - Что не так со мной? Я как то не уверенно говорю? Почему то
-                      меня плохо слушают, постоянно отвлекаются от моей речи,
-                      покупают не у меня а у другого специалиста. Он же хуже чем
-                      я, в чем проблема?
-                      <br /><br />
-                      Такие вопросы не редкость от экспертов или психологов,
-                      лекторов, директоров крупных предприятий, которые приходят
-                      ко мне ставить голос.
-                    </p>
-                    <a href="#" class="blog__article-link">читать дальше</a>
-                  </div>
-                </article>
-                <article class="blog__article">
-                  <img
-                    src="assets/img/blog/blog/prev1.png"
-                    alt="Preview"
-                    class="blog__article-img"
-                  />
-                  <div class="blog__article-content">
-                    <h3 class="blog__article-title">УБЕЖДАЙ СВИНЕЙ!</h3>
-                    <img src="assets/img/blog/blog/prev.png" alt="prev" class="blog__article-img-mob">
-                    <p class="blog__article-desc">
-                      - Что не так со мной? Я как то не уверенно говорю? Почему то
-                      меня плохо слушают, постоянно отвлекаются от моей речи,
-                      покупают не у меня а у другого специалиста. Он же хуже чем
-                      я, в чем проблема?
-                      <br /><br />
-                      Такие вопросы не редкость от экспертов или психологов,
-                      лекторов, директоров крупных предприятий, которые приходят
-                      ко мне ставить голос.
-                    </p>
-                    <a href="#" class="blog__article-link">читать дальше</a>
-                  </div>
-                </article>
-                <article class="blog__article">
-                  <img
-                    src="assets/img/blog/blog/prev.png"
-                    alt="Preview"
-                    class="blog__article-img"
-                  />
-                  <div class="blog__article-content">
-                    <h3 class="blog__article-title">УБЕЖДАЙ СВИНЕЙ!</h3>
-                    <img src="assets/img/blog/blog/prev.png" alt="prev" class="blog__article-img-mob">
-                    <p class="blog__article-desc">
-                      - Что не так со мной? Я как то не уверенно говорю? Почему то
-                      меня плохо слушают, постоянно отвлекаются от моей речи,
-                      покупают не у меня а у другого специалиста. Он же хуже чем
-                      я, в чем проблема?
-                      <br /><br />
-                      Такие вопросы не редкость от экспертов или психологов,
-                      лекторов, директоров крупных предприятий, которые приходят
-                      ко мне ставить голос.
-                    </p>
-                    <a href="#" class="blog__article-link">читать дальше</a>
-                  </div>
-                </article>
-                <article class="blog__article">
-                  <img
-                    src="assets/img/blog/blog/prev.png"
-                    alt="Preview"
-                    class="blog__article-img"
-                  />
-                  <div class="blog__article-content">
-                    <h3 class="blog__article-title">УБЕЖДАЙ СВИНЕЙ!</h3>
-                    <img src="assets/img/blog/blog/prev.png" alt="prev" class="blog__article-img-mob">
-                    <p class="blog__article-desc">
-                      - Что не так со мной? Я как то не уверенно говорю? Почему то
-                      меня плохо слушают, постоянно отвлекаются от моей речи,
-                      покупают не у меня а у другого специалиста. Он же хуже чем
-                      я, в чем проблема?
-                      <br /><br />
-                      Такие вопросы не редкость от экспертов или психологов,
-                      лекторов, директоров крупных предприятий, которые приходят
-                      ко мне ставить голос.
-                    </p>
-                    <a href="#" class="blog__article-link">читать дальше</a>
-                  </div>
-                </article>
+                </div>
+                <p class="article__text">
+                  Я не сошла с ума, друзья😅
+                  <br /><br />
+                  Это высказывание чемпиона конкурса пастухов по зазыванию
+                  свиней с дальних растояний😃 И возможно мы бы и не узнали
+                  столь забавного высказывания, но покойный Артур Куднер,
+                  специалист по коммерческой рекламе держал это высказывание
+                  у себя на стене В РАМОЧКЕ!😃👍✅
+                  <br /><br />
+                  Как же это связано с голосом и его возможностями?)
+                  Да напрямую😃 Голос — это не только сила или громкость,
+                  не только приятность обертонов тембра, как мы с вами недавно
+                  обсуждали, но и уверенность, чёткость и умение убедить.
+                  Кто владеет своим голосом — ТОТ ВЛАДЕЕТ собой, миром,
+                  ситуацией и даже УСПЕХОМ!
+                  <br /><br />
+                  Подвижность, гибкость голоса, так называемый звуко-высотный
+                  диапазон, позволяющий передавать мысль говорящего во всей
+                  её полноте и разнообразии оттенков в меняющемся
+                  интонационно-мелодическом рисунке. Диапазон речевого голоса
+                  зависит от скоординированной работы всего речевого аппарата.
+                  <br /><br />
+                  Представляете, задача вашего вокального тренера услышать
+                  все мелочи и скоординировать огромную машину по выработке
+                  сильного, уверенного, убедительного и тренированного голоса.
+                  Плюс ещё и минимизировать ваши затраты при этом. Чтобы вы пели
+                  выразительно, сильно и при этом не уставали!🤗🎶🎤
+                  <br /><br />
+                  Сразу вспомнилось в связи с этим высказывания зарубежных
+                  преподавателей вокала, когда они впервые сталкиваются
+                  с обучением русских. Первое, что они заявляют «Почему вы такие
+                  не эмоциональные?"😮
+                  <br /><br />
+                  Это мы то не эмоциональные?Вот уж неправда! А почему такое
+                  ощущение складывается у них? Да потому, что когда русский
+                  человек разговаривает — он разговаривает достаточно монотонно,
+                  особенно по сравнению с иностранцами. Однако, чем красочнее
+                  интонации, тем больше внимания завоёвывает говорящий
+                  или поющий человек!
+                  <br /><br />
+                  Поэтому, чем больше мы умеем доносить своим голосом,
+                  хоть в речи, хоть в вокале, тем лучше нас воспринимают, лучше
+                  понимают, тем более „читаемо“ наше чувство и тем выразительнее
+                  наш голос!🤗✅🎤👍
+                </p>
+                <p class="article__date">15 марта 2022</p>
               </div>
-              <ul class="blog__pagination">
-                <li class="blog__pagination-item blog__pagination-item--active">
-                  <span>1</span>
-                </li>
-                <li class="blog__pagination-item">
-                  <span>2</span>
-                </li>
-                <li class="blog__pagination-item">
-                  <span>3</span>
-                </li>
-              </ul>
             </div>
           </div>
         </div>
